--- a/cinema/cinema/wwwroot/css/shows.css
+++ b/cinema/cinema/wwwroot/css/shows.css
@@ -47,3 +47,12 @@
 .date-row-date{
     margin:0;
 }
+
+h1{
+    color:ghostwhite;
+}
+
+body {
+ background-repeat:no-repeat;
+ background-attachment:fixed;
+}
