--- a/cinema/cinema/Views/Shared/_Layout.cshtml
+++ b/cinema/cinema/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand logo" href="#">
-              <img src="imagesStyling/logo-se.png" alt="logo" />
+              <img src="imagesStyling/logo-se.png" alt="logo" class="img-responsive"/>
               </a>
                 <a class="navbar-brand" asp-area="" asp-page="/Index">cinema</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -43,6 +43,15 @@
     <footer class="border-top footer text-muted fixed-bottom">
         <div class="container footer-container">
             &copy; 2022 - cinema - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            <a class="social-media" href="https://www.facebook.com/avans/">
+              <img src="imagesStyling/fb-bw.png" alt="fb" class="img-responsive"/>
+              </a>
+               <a class="social-media" href="https://www.instagram.com/avanshogeschool/?hl=en">
+              <img src="imagesStyling/ig-bw.png" alt="ig" class="img-responsive"/>
+              </a>
+               <a class="social-media" href="https://twitter.com/avanshogeschool?lang=en">
+              <img src="imagesStyling/tw-bw.png" alt="tw" class="img-responsive"/>
+              </a>
         </div>
     </footer>
 
