--- a/cinema/cinema/Views/Tickets/Quantity.cshtml
+++ b/cinema/cinema/Views/Tickets/Quantity.cshtml
@@ -4,6 +4,12 @@
     ViewBag.Title = "title";
     Layout = "_Layout";
 }
+
+@section Styles
+{
+    <link rel="stylesheet" href="~/css/ticketQuantity.css" asp-append-version="true"/>
+}
+
 <div class="container">
     <div class="row">
         <div class="col-md-6">
