--- a/cinema/cinema/wwwroot/css/movieIndex.css
+++ b/cinema/cinema/wwwroot/css/movieIndex.css
@@ -1,8 +1,43 @@
-﻿body {
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+﻿html{
+    overflow-x:hidden;
 }
 
-.container{
-    margin:0 !important;
+body {
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: ghostwhite !important;
+}
+
+h1 {
+    color: ghostwhite;
+}
+
+.movie-container {
+    width: 100vw;
+    height:100vh;
+}
+
+.poster-image {
+    width: min-content;
+    margin: 0;
+    float: left;
+}
+
+.movie-info {
+    float: right;
+    width: 50%;
+    height: 500px;
+}
+
+.border {
+    border: 1px solid ghostwhite;
+    color: ghostwhite !important;
+}
+
+.one-movie-container {
+    width: 50vw;
+    height: 505px;
+    padding-bottom: 10px;
+    margin-bottom:10px;
+    border: 1px solid ghostwhite;
 }
