fixed width for kijkwijzer in movies.index.cshtml

--- a/cinema/cinema/Views/Movies/Index.cshtml
+++ b/cinema/cinema/Views/Movies/Index.cshtml
@@ -80,51 +80,51 @@
                       
                             if (ListKijkwijzer.Contains("AL"))
                             {
-                            <img src ="~/imagesKijkwijzer/AL.png" alt="AL" style="height:50px;wid:50px;" />   
+                            <img src ="~/imagesKijkwijzer/AL.png" alt="AL" style="height:50px;width:50px;" />   
                             }
                             if (ListKijkwijzer.Contains("12"))
                             {
-                            <img src ="~/imagesKijkwijzer/12.png" alt="AL" style="height:50px;wid:50px;" />   
+                            <img src ="~/imagesKijkwijzer/12.png" alt="AL" style="height:50px;width:50px;" />   
                             }
                             if (ListKijkwijzer.Contains("GT"))
                             {
-                            <img src ="~/imagesKijkwijzer/GTG.png" alt="AL" style="height:50px;wid:50px;" />   
+                            <img src ="~/imagesKijkwijzer/GTG.png" alt="AL" style="height:50px;width:50px;" />   
                             }
                             if (ListKijkwijzer.Contains("G"))
                             {
-                            <img src ="~/imagesKijkwijzer/G.png" alt="AL" style="height:50px;wid:50px;" />   
+                            <img src ="~/imagesKijkwijzer/G.png" alt="AL" style="height:50px;width:50px;" />   
                             }
                             if (ListKijkwijzer.Contains("A"))
                             {
-                            <img src ="~/imagesKijkwijzer/angst.png" alt="AL" style="height:50px;wid:50px;" />   
+                            <img src ="~/imagesKijkwijzer/angst.png" alt="AL" style="height:50px;width:50px;" />   
                             }
                             if (ListKijkwijzer.Contains("16"))
                             {
-                            <img src ="~/imagesKijkwijzer/16.png" alt="AL" style="height:50px;wid:50px;" />   
+                            <img src ="~/imagesKijkwijzer/16.png" alt="AL" style="height:50px;width:50px;" />   
                             }
                             if (ListKijkwijzer.Contains("18"))
                             {
-                            <img src ="~/imagesKijkwijzer/18.png" alt="AL" style="height:50px;wid:50px;" />   
+                            <img src ="~/imagesKijkwijzer/18.png" alt="AL" style="height:50px;width:50px;" />   
                             }
                             if (ListKijkwijzer.Contains("6"))
                             {
-                            <img src ="~/imagesKijkwijzer/6.png" alt="AL" style="height:50px;wid:50px;" />   
+                            <img src ="~/imagesKijkwijzer/6.png" alt="AL" style="height:50px;width:50px;" />   
                             }
                             if (ListKijkwijzer.Contains("D"))
                             {
-                            <img src ="~/imagesKijkwijzer/D.png" alt="AL" style="height:50px;wid:50px;" />   
+                            <img src ="~/imagesKijkwijzer/D.png" alt="AL" style="height:50px;width:50px;" />   
                             }
                             if (ListKijkwijzer.Contains("MG6"))
                             {
-                            <img src ="~/imagesKijkwijzer/mg6.png" alt="AL" style="height:50px;wid:50px;" />   
+                            <img src ="~/imagesKijkwijzer/mg6.png" alt="AL" style="height:50px;width:50px;" />   
                             }
                             if (ListKijkwijzer.Contains("S"))
                             {
-                            <img src ="~/imagesKijkwijzer/S.png" alt="AL" style="height:50px;wid:50px;" />   
+                            <img src ="~/imagesKijkwijzer/S.png" alt="AL" style="height:50px;width:50px;" />   
                             }
                             if (ListKijkwijzer.Contains("DISCR"))
                             {
-                            <img src ="~/imagesKijkwijzer/Discr.png" alt="AL" style="height:50px;wid:50px;" />   
+                            <img src ="~/imagesKijkwijzer/Discr.png" alt="AL" style="height:50px;width:50px;" />   
                             }
                         }
                       </div>
