--- a/cinema/cinema/Views/Home/index.cshtml
+++ b/cinema/cinema/Views/Home/index.cshtml
@@ -15,7 +15,7 @@
             @foreach (var movie in @ViewBag.movies)
             {
                 <div class="swiper-slide">
-                    <a asp-controller="Tickets" asp-action="Quantity" asp-route-id="@movie.Name">
+                    <a asp-controller="Movies" asp-action="Details" asp-route-id="@movie.Name">
                         <img class="img-fluid" style="width: 100%; object-fit: cover;" alt="@movie.Name" src="@movie.Poster">
                     </a>
                     <div class="carousel-caption bg-white text-start p-3 mb-4 rounded">
