--- a/cinema/cinema/wwwroot/css/shows.css
+++ b/cinema/cinema/wwwroot/css/shows.css
@@ -3,6 +3,7 @@
     grid-template-columns: 15rem 1fr;
     grid-template-rows: auto 1rem;
     margin: 0 1rem 1rem 1rem;
+    background: #ffffff50;
     max-height:25rem;
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
