--- a/cinema/cinema/Views/Shared/_Layout.cshtml
+++ b/cinema/cinema/Views/Shared/_Layout.cshtml
@@ -40,15 +40,28 @@
             @RenderBody()
         </main>
     </div>
-<div class="container-fluid">
-    <div class="row justify-content-evenly align-items-end">
+<div id="mapssubscribe" class="container-fluid">
+    <div class="row justify-content-evenly align-items-start">
         <div class="col-4">
           <style>  
                
               #dvMap {  
-                  height: 50%;  
+                  height: 40vh;
+                  width: 31.6vw;  
               }  
             
+              .adp-summary {
+                            color: ghostwhite;
+                            } 
+              
+              .adp-substep {
+              color: ghostwhite;
+              } 
+              
+              .adp-stepicon {
+                            background: ghostwhite;
+                            } 
+                
               .button {  
                   background-color: blue;  
                   border: none;  
@@ -65,9 +78,21 @@
               .button4 {  
                   border-radius: 9px;  
               }  
+              
+              .warnbox-content {
+              display: none;
+              }
+              
+              .warnbox-c1 {
+                            display: none;
+                            }
+                            
+              .warnbox-c2 {
+                            display: none;
+                            }
             
               input[type=text], select {  
-                  width: 40%;  
+                  width: 70%;  
                   padding: 12px 20px;  
                   margin: 10px 0;  
                   display: inline-block;  
@@ -159,7 +184,13 @@
                               </div>
         </div>
         <div class="col-4">
-          Nieuwsbrief
+            <div>
+                <h4>Aanmelden voor nieuwsbrief</h4>
+                <form method="post" asp-action="Create" asp-controller="Subscribers">
+                    <input name="email" type="text" placeholder="Email adres">
+                    <input type="submit" value="Aanmelden">
+                </form>
+            </div>
         </div>
     </div>
 </div>
