Added cinema screen to seat selection page

--- a/cinema/cinema/Views/Tickets/SeatSelection.cshtml
+++ b/cinema/cinema/Views/Tickets/SeatSelection.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="~/css/shows.css" asp-append-version="true"/>
 }
 
+<div class="w-100 text-center py-3 alert-light alert">SCREEN</div>
 @{
     int orderid = (int)ViewData["orderid"];
     int[] roommap = (int[])ViewData["roommap"];
