--- a/cinema/cinema/wwwroot/css/site.css
+++ b/cinema/cinema/wwwroot/css/site.css
@@ -50,3 +50,62 @@ footer{
 h1{
     color:ghostwhite;
 }
+
+/*googlemap*/
+
+#dvMap {
+    height: 40vh;
+    width: 31.6vw;
+}
+
+.adp-summary {
+    color: ghostwhite;
+}
+
+.adp-substep {
+    color: ghostwhite;
+}
+
+.adp-stepicon {
+    background: ghostwhite;
+}
+
+.button {
+    background-color: blue;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.button4 {
+    border-radius: 9px;
+}
+
+.warnbox-content {
+    display: none;
+}
+
+.warnbox-c1 {
+    display: none;
+}
+
+.warnbox-c2 {
+    display: none;
+}
+
+input[type=text], select {
+    width: 70%;
+    padding: 12px 20px;
+    margin: 10px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}  
+
