--- a/cinema/cinema/Views/Subscribers/Create.cshtml
+++ b/cinema/cinema/Views/Subscribers/Create.cshtml
@@ -1,18 +1,8 @@
 ﻿@model cinema.Models.Subscriber
 
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
-</div>
-</body>
-</html>
+<h1>Succesvol aangemeld voor de nieuwsbrief!</h1>
+<script>
+         setTimeout(function(){
+            window.location.href = '/';
+         }, 1000);
+</script>
